Update text content

--- a/index.html
+++ b/index.html
@@ -165,18 +165,18 @@
                 <div class="main-header">Announcements</div>
                 <div class="announce-main">
                     <div class="announce-item">
-                        <div class="announce-header">Announcement 1</div>
+                        <div class="announce-header">This will change your life</div>
                         <div class="announce-text">Nunc egestas faucibus orci vel porta.
                              Ut sit amet erat sit amet erat placerat pulvinar vehicula at
                               sapien. Praesent vitae bibendum nunc...</div>
                     </div>
                     <div class="announce-item-middle">
-                        <div class="announce-header">Announcement 2</div>
+                        <div class="announce-header">THIS will mess you up</div>
                         <div class="announce-text">Quisque arcu ante, mattis rutrum magna
                              nec, pellentesque accumsan nisi. Praesent in dui nisi...</div>
                     </div>
                     <div class="announce-item">
-                        <div class="announce-header">Announcement 3</div>
+                        <div class="announce-header">...And this will relax you</div>
                         <div class="announce-text">Proin faucibus dapibus suscipit. Nunc
                              quis eros pretium, tincidunt quam id, efficitur libero...</div>
                     </div>
@@ -189,28 +189,28 @@
                         <img src="icons/user.svg" alt="User icon" class="trend-icon">
                         <div class="trend-text">
                             <div class="trend-user">@coolguy</div>
-                            <div class="trend-user-bio">User bio 1</div>
+                            <div class="trend-user-bio">The Chill Project</div>
                         </div>
                     </div>
                     <div class="trend-item">
                         <img src="icons/user.svg" alt="User icon" class="trend-icon">
                         <div class="trend-text">
-                            <div class="trend-user">@coolerguy</div>
-                            <div class="trend-user-bio">User bio 2</div>
+                            <div class="trend-user">@hellyeahdude</div>
+                            <div class="trend-user-bio">The Freaky Project</div>
                         </div>
                     </div>
                     <div class="trend-item">
                         <img src="icons/user.svg" alt="User icon" class="trend-icon">
                         <div class="trend-text">
-                            <div class="trend-user">@coolestguy</div>
-                            <div class="trend-user-bio">User bio 3</div>
+                            <div class="trend-user">@who_am_i</div>
+                            <div class="trend-user-bio">The Soul-Searching Project</div>
                         </div>
                     </div>
                     <div class="trend-item">
                         <img src="icons/user.svg" alt="User icon" class="trend-icon">
                         <div class="trend-text">
-                            <div class="trend-user">@coolerestguy</div>
-                            <div class="trend-user-bio">User bio 4</div>
+                            <div class="trend-user">@yeah_who_are_you</div>
+                            <div class="trend-user-bio">The Mystery Project</div>
                         </div>
                     </div>
                 </div>
