Add responsive fixes

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <div class="main-header">Your Projects</div>
                 <div class="project-main">
                     <div class="project-item">
-                        <div class="project-header">Life-altering Project</div>
+                        <div class="project-header">Life-Altering Project</div>
                         <div class="project-text">Lorem ipsum dolor sit amet, consectetur
                              adipiscing elit. Sed vitae vulputate velit. Suspendisse odio
                               enim, efficitur ac aliquet eu, porta pharetra lacus. Donec
